# amethyst-physics

./: .gitignore  Cargo.toml  README.md
assets/: spritesheet.ron
assets/maps/: map-1.json  map-1.tmx  sans titre.json
assets/prefabs/: player.ron
assets/sprites/: logo.ron
assets/textures/: default-tileset.json  default-tileset.tsx  default_tileset.ron
assets/ui/: fps.ron
config/: context.ron  display.ron  input.ron
src/: main.rs
src/components/: animation.rs  ball.rs  collision.rs  flags.rs  ground.rs  mod.rs  orientation.rs  physics.rs  player.rs  rigid_body.rs
src/entities/: ball.rs  camera.rs  ground.rs  mod.rs  player.rs
src/events/: mod.rs  player_input_events.rs
src/resources/: context.rs  map_config.rs  mod.rs  prefabs.rs  spritesheet.rs
src/resources/tilemap/: mod.rs  tileset.rs
src/states/: game.rs  loading.rs  mod.rs
src/systems/: animation.rs  collision.rs  mod.rs  orientation.rs  physics.rs  player.rs  rigid_body.rs  transform.rs  transformation.rs
src/systems/player/: inputs.rs  kinematics.rs  mod.rs
src/systems/ui/: fps.rs  mod.rs
