[package]
name = "amethyst-starter-2d"
version = "0.2.0"
authors = ["Hilmar Wiegand <me@hwgnd.de>", "Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"

[dependencies]
amethyst = {version = "0.15.2", features = ["no-slow-safety-checks"]}
log = { version = "0.4.8", features = ["serde"] }
serde = "1.0.115"
rapier2d = { version = "0.1.4", features = [ "simd-nightly", "parallel" ] }
ron = "0.6.1"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
