[package]
name = "amethyst-physics"
version = "0.2.0"
authors = ["Hilmar Wiegand <me@hwgnd.de>", "Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"

[dependencies]
log = { version = "0.4.8", features = ["serde"] }
serde = "1.0.115"
ron = "0.6.1"
nalgebra = "0.22.0"
strum = "0.19.2"
strum_macros = "0.19.2"
serde_tuple = "0.5.0"

[dependencies.amethyst]
git = "https://github.com/niconicoj/amethyst"
default-features = false
features = ["no-slow-safety-checks", "json", "animation", "gilrs_controller"]

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
